# HABSat-OBC

./: .clang-format  .clang-tidy  .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  HABSat-OBC.ioc  README.md  annotated.html  annotated_dup.js  bitwise_8cpp.html  bitwise_8hpp.html  bitwise_8hpp.js  bitwise_8hpp_source.html  blink_8cpp.html  blink_8cpp.js  blink_8hpp.html  blink_8hpp.js  blink_8hpp_source.html  bsp__driver__sd_8c.html  bsp__driver__sd_8h.html  bsp__driver__sd_8h_source.html  button_8hpp.html  button_8hpp_source.html  classes.html  classhabsat_1_1buses_1_1I2C-members.html  classhabsat_1_1buses_1_1I2C.html  classhabsat_1_1buses_1_1I2C.js  classhabsat_1_1buses_1_1SPI-members.html  classhabsat_1_1buses_1_1SPI.html  classhabsat_1_1buses_1_1SPI.js  classhabsat_1_1buses_1_1UART-members.html  classhabsat_1_1buses_1_1UART.html  classhabsat_1_1buses_1_1UART.js  classhabsat_1_1gps_1_1Gps-members.html  classhabsat_1_1gps_1_1Gps.html  classhabsat_1_1gps_1_1Gps.js  (+339 more)
Core/: CMakeLists.txt  Obc.cpp  Obc.h  interruptHandlers.cpp  mainLoop.cpp
Core/Buses/: Bus.h  CMakeLists.txt  I2CBus.cpp  I2CBus.h  SDIOBus.cpp  SDIOBus.h  SPIBus.cpp  SPIBus.h  UARTBus.cpp  UARTBus.h
Core/External_Libs/: CMakeLists.txt
Core/External_Libs/FreeRTOS/: queue.c
Core/FreeRTOS/: CMakeLists.txt
Core/FreeRTOSWrapper/: CMakeLists.txt  freertoswrapper.cpp  os_task.cpp
Core/Include_Files/: CMakeLists.txt  constants.h  handles.h  hardware_config_template.txt
Core/Includes/: CMakeLists.txt  constants.h  handles.h  hardware_config.h  hardware_config_template.txt
Core/Interrupt_Callbacks/: interrupt_callbacks.cpp
Core/Interrupt_Functions/: CMakeLists.txt  interrupt_handlers.cpp
Core/Interrupt_Handlers/: CMakeLists.txt  interruptHandlers.cpp  interruptHandlers.h  interrupt_handlers.cpp  interrupt_handlers.h
Core/Lcd/: CMakeLists.txt  lcd.cpp
Core/MCU/: Button.cpp  Button.h  CMakeLists.txt  GPIOPin.cpp  GPIOPin.h  Led.cpp  Led.h  button.cpp  button.h  led.cpp
Core/MCU_Board/: Button.cpp  Button.h  CMakeLists.txt  GPIOPin.h  Led.cpp  Led.h
Core/Main/: CMakeLists.txt  main_cpp.cpp
Core/Main_Cpp/: CMakeLists.txt  main_cpp.cpp
Core/Main_Loop/: CMakeLists.txt  mainLoop.cpp  mainLoop.h  main_loop.cpp  main_loop.h
Core/Mainpp/: CMakeLists.txt  mainpp.cpp
Core/Modules/: CMakeLists.txt
Core/OBC/: CMakeLists.txt  Gps.cpp  Gps.h  Hardware.cpp  Hardware.h  Obc.cpp  Obc.h  hardware.cpp  hardware.h  hardware_config.h  obc.cpp  obc.h  peripherals.cpp  utils.cpp
Core/Peripherals/: CMakeLists.txt  Gps.cpp  Gps.h  Lcd.cpp  Lcd.h  MicroSDReader.h  Rtc.cpp  Rtc.h  SDReader.cpp  SDReader.h  SDReader.ipp  Sensor.cpp  Sensor.h  lcd.cpp  lcd.h  peripherals.cpp  rtc.cpp  rtc.h  sensor.cpp  sensor.h  wifi.cpp  wifi.h
Core/Rtc/: CMakeLists.txt  rtc.cpp
Core/Sensor/: CMakeLists.txt  sensor.cpp
Core/Services/: Blink.cpp  Blink.h  CMakeLists.txt  Display.cpp  Display.h  MeasureTime.cpp  MeasureTime.h  MeasureWeather.cpp  MeasureWeather.h  SDSave.cpp  SDSave.h  SDSave.ipp
Core/System/: CMakeLists.txt  Queue.h  Task.h  osMutex.h  osQueue.h  osTask.h  os_queue.cpp  os_queue.h  os_task.cpp  os_task.h
Core/Task_Functions/: CMakeLists.txt  dummy.cpp  idle_tasks.cpp  interrupt_tasks.cpp
Core/Tasks/: CMakeLists.txt
Core/Utils/: CMakeLists.txt  Noncopyable.h  Terminal.cpp  Terminal.h  bitwiseOperations.cpp  bitwiseOperations.h  bitwise_operations.h
Core/WiFi/: CMakeLists.txt  wifi.cpp
Core/lcd/: CMakeLists.txt  lcd.cpp
Core/mainpp/: CMakeLists.txt  mainpp.cpp
Core/utils/: CMakeLists.txt
(+439 files in other folders)
