
add_subdirectory(Main_Loop)
add_subdirectory(Utils)
add_subdirectory(System)
add_subdirectory(Interrupt_Handlers)
add_subdirectory(Peripherals)
add_subdirectory(Include_Files)
add_subdirectory(External_Libs)
add_subdirectory(OBC)
add_subdirectory(Buses)
add_subdirectory(MCU)
add_subdirectory(Services)